--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 	
 </head>
 <body>
-<script src = "file:///F:/JAVASCRIPT/test.js"> 	
+<script src = "file:///F:/JAVASCRIPT/Lesson 1/test.js"> 	
 
 
 </script>
